import "rt_tps_point.proto";
package tps.proto;

message RT_TPS_DVHData
{
	required string parentuid = 1;
	required string voiuid = 2;
	optional float minDose = 3;
	optional float maxDose = 4;
	optional float meanDose = 5;
	optional float standardDeviation = 6;
	optional float inGrid = 7;
	optional float volume = 8;
	repeated RT_TPS_POINT point = 9;
	repeated RT_TPS_POINT cumulativepoint = 10;
}
